# docitool

./: .gitignore  Makefile  Pipfile  README.md  index.html  pyproject.toml
biblio_samples/: ordonez16.toml
chapters/: 01.html  02.html  03.html  03_core_cmd.html  03_opt_cmd.html  _cover_.html  _rev_hist_.html  _toc_.html
doc/: Makefile
doc/chapters/: 02.html  03.html  03_opt_cmd.html  _rev_hist_.html  _toc_.html
doc/include_samples/: sample.matplotlib.py  trivium.toml
doc/style/: print.css  reset.css
doc/style/fonts/sourcesans/: OFL.txt  font.css
doc/uml/: dispatcher.activity.puml  doc2landmarks.activity.puml  general.activity.puml  state.puml  usecase.puml
docitool/: __main__.py
style/fonts/stix/: font.css
tools/: preprocess.py
uml/: state.puml
